--- a/javascript powerpoint/javascript_intro.html
+++ b/javascript powerpoint/javascript_intro.html
@@ -58,6 +58,9 @@
 			More browsers - remember to always cross-browser test your code, and possibly cross-device test it (same browser on different devices doesn't always work out well). 
 			</li>
 			<li>
+			<a href="http://caniuse.com/" target="_blank">Can I Use website</a>
+			</li>
+			<li>
 			Commonly used text editors are Notepad++ and Sublime Text. For C#ers, you can write your JavaScript from VisualStudio.
 			</li>
 			<li>
@@ -129,8 +132,10 @@
 				<h1>The DOM</h1>
 			</div>
 			<div>
-			JavaScript is generally used to access the DOM in HTML pages on the web. DOM stands for Document Object Model: 
+			JavaScript is generally used to manipulate the DOM in HTML pages on the web. DOM stands for Document Object Model: 
             <a href="https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model" target="_blank">a definition</a>
+			and
+			<a href="https://css-tricks.com/dom/" target="_blank">another definition</a>
 			<ul>
 			<li>
 			it's a programming interface that models any HTML page on the web as a tree. By navigating the nodes on the tree, it is possible via a scripting language like JavaScript, to change the HTML and modify the page without going back to the server 
@@ -181,7 +186,8 @@
 				<h1>How to test your JavaScript</h1>
 			</div>
 			<div>
-			To test your JavaScript, see <a href="http://jasmine.github.io/" target="_blank">Jasmine</a> 
+			To test your JavaScript, see <a href="http://jasmine.github.io/" target="_blank">Jasmine</a>. 
+			Test runner: <a href="http://karma-runner.github.io/0.13/index.html" target="_blank">http://karma-runner.github.io/0.13/index.html</a>
 			(and <a href="https://github.com/mmanela/chutzpah" target="_blank">Chutzpah</a> if you work in VisualStudio)
 			<ul>
 			<li>
@@ -238,6 +244,10 @@
 			<li>
 			<a href="http://www.codeproject.com/Articles/577080/Create-an-HTML5-and-JavaScript-Maze-Game-with-a-ti" target="_blank">
 			Code Project</a>
+			</li>
+			<li>
+			<a href="http://www.infoq.com/articles/state-of-javascript-2016" target="_blank">
+			an article on infoq</a>
 			</li>
 			</ul>
 			</div>
